# prephub

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/__tests__/components/: CourseCard.test.tsx  CourseGrid.test.tsx  CreateCourseDialog.test.tsx  GenerationBanner.test.tsx  NodeCard.test.tsx  ReviewSessionClient.test.tsx  ReviewWidget.test.tsx  SpacedRepetitionInfo.test.tsx
frontend/__tests__/lib/: jobs.test.ts  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/review/: page.tsx
frontend/components/: CreateCourseDialog.tsx  GenerationBanner.tsx  ReviewWidget.tsx
frontend/components/cbr/: ReviewSessionClient.tsx  SpacedRepetitionInfo.tsx
frontend/components/courses/: CourseCard.tsx  CourseGrid.tsx
frontend/components/interactive-labs/: CapsuleContent.tsx  CapsuleHeader.tsx  LabCapsulesList.tsx  LabHeader.tsx  LabResultsSummary.tsx
frontend/components/learning-path/: NodeCard.tsx  NodeDetailPanel.tsx  PathNavigator.tsx
frontend/components/ui/: badge.tsx  dialog.tsx  progress.tsx
frontend/lib/: jobs.ts  types.ts
schemas/: question_types.json
src/course_builder/: __init__.py  cli.py  config.py
src/course_builder/domain/: books.py  (+5 more)
tests/gen_engine/: __init__.py  test_base.py  test_factory.py  test_gemini.py  test_provider.py  test_vllm.py
tests/metrics/: test_quality.py
tests/pipeline/: test_base.py  test_checkpoint.py  test_models.py
tests/pipelines/: test_batch_embed.py
(+93 files in other folders)
